maud/tests/warnings/attribute-missing-value.stderr
error: unexpected end of input
 --> $DIR/attribute-missing-value.rs:4:5
  |
4 | /     html! {
5 | |         a href=
6 | |     };
  | |_____^
  |
  = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)
